1,重构文件上传